--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Book
-description: A simple Jekyll theme
-url: # site url
+title: なにもしない太郎
+description: 適当になにかを書くブログ
+url: taroooyan.github.io# site url
 avatar: # path/to/avatar for index page. e.g. /assets/img/avatar.jpg
 favicon: # path/to/favicon for site. e.g. /assets/img/favicon.ico
 google_analytics: # google analytics id
@@ -16,14 +16,14 @@ disqus_shortname: # disqus_shortname for disqus comment system
 # a new whidow will be open when link is clicked.
 #
 about:
-  - paragraph: ?link?, a simple Jekyll theme. Built by ?link?
+  - paragraph: ?link?<p>?link?
     text_align: center
     links:
-      - name: Book
-        url: https://github.com/kkninjae/book
+      - name: github
+        url: https://github.com/taroooyan
         external: true
-      - name: Lang Liu
-        url: http://kkninjae.com/about/
+      - name: twitter
+        url: https://twitter.com/taroooyan
         external: false
 
     
